--- a/includes/style/style.css
+++ b/includes/style/style.css
@@ -1,305 +1,82 @@
-/*style.css*/
-body{
+/* ----------------------------
+   Login Page Styles
+---------------------------- */
 
-    margin: 0px;
-    
-    padding: 0px;
-    
-    font-family: Georgia, "Times New Roman", Times, serif;
-    
-    }
-    
-    h1, h2, h3{
-    
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    
-    }
-    
-    
-    
-    ul.products {
-    
-    padding: 0;
-    
+/* General */
+html, body {
+    height: 100%;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Body background removed - will be added per page as needed */
+
+/* Main content wrapper - RIGHT aligned */
+.main-content {
+    display: flex;
+    justify-content: flex-end; /* flex-start (left), center (center), flex-end (right) */
+    align-items: center;
+    min-height: calc(100vh - 70px);
+    padding-top: 20px;
+    padding-right: 50px; /* Spacing from right edge */
+}
+
+/* Login form container */
+.login-container {
+    background-color: rgba(255, 255, 255, 0.92);
+    padding: 40px 50px;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.25);
     
-    max-width: 740px;
+    /* ⭐ WIDTH CONTROL */
+    width: 550px; /* Increased from 450px - Change to: 500px, 600px, 700px for even wider */
+    max-width: 90%; /* Responsive: takes 90% on smaller screens */
     
-    margin-left: auto;
-    
-    margin-right: auto;
-    
-    }
-    
-    ul.products li {
-    
-    display: inline-block;
-    
-    max-width: 200px;
-    
-    padding: 10px;
-    
-    background-color: #FFFFFF;
-    
-    margin: 10px;
-    
-    border: 1px solid #EAEAEA;  
-    
-    color: #3D3D3D;
-    
-    }
-    
-    ul.products li h3 {
-    
-    margin: -10px -10px 10px -10px;
-    
-    padding: 10px;
-    
-    text-align: center;
-    
-    background-color: #F5F5F5;
-    
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    
-    font-size: 1.1em;
-    
-    color: #5A5A5A;
-    
-    }
-    
-    ul.products li fieldset {
-    
-    border: none;
-    
-    padding: 5px 5px 5px 0px;
-    
-    margin: 0;
-    
-    }
-    
-    ul.products li fieldset label{
-    
-    display:block;
-    
-    margin-bottom: 4px;
-    
-    }
-    
-    ul.products li fieldset label span{
-    
-    width: 80px;
-    
-    float: left;
-    
-    }
-    
-    ul.products li fieldset label select{
-    
-    min-width: 100px;
-    
-    }
-    
-    
-    
-    button, .button{
-    
-    background-color: #39b3d7;
-    
-    min-width: 100px;
-    
-    border: none;
-    
-    padding: 10px;
-    
-    display: inline-block;
-    
-    text-align: center;
-    
-    cursor: pointer;
-    
+    /* ⭐ HEIGHT CONTROL (optional) */
+    min-height: auto; /* Change to: 500px, 600px, etc. for fixed minimum height */
+    height: auto; /* Default: adjusts to content. Change to fixed value if needed */
+}
+
+.login-container h3 {
+    font-weight: 600;
+    color: #333;
+}
+
+.login-container .form-label {
+    font-weight: 500;
+    color: #555;
+}
+
+.login-container .form-control {
+    border-radius: 8px;
+    padding: 10px 15px;
+}
+
+.login-container .btn-primary {
+    border-radius: 8px;
+    padding: 12px;
+    font-weight: 600;
+}
+
+.login-container a {
+    color: #0d6efd;
     text-decoration: none;
-    
-    color: #FFF;
-    
-    min-height: 15px;
-    
-    font: 12px/15px Arial, Helvetica, sans-serif;
-    
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.26);
-    
-    border-radius: 3px;
-    
+}
+
+.login-container a:hover {
+    text-decoration: underline;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .main-content {
+        justify-content: center; /* Center on mobile */
+        padding-right: 20px;
+        padding-left: 20px;
     }
     
-    button:hover, .button:hover{
-    
-    background-color: #44C7ED;
-    
+    .login-container {
+        width: 100%; /* Full width on mobile */
+        padding: 30px 25px; /* Less padding on mobile */
     }
-    
-    
-    
-    .product-thumb{
-    
-    text-align:center;
-    
-    }
-    
-    .product-desc {
-    
-    font-style: italic;
-    
-    font-size: 0.8em;
-    
-    margin-bottom: 4px;
-    
-    height: 40px;
-    
-    overflow: hidden;
-    
-    margin-top: 5px;
-    
-    }
-    
-    
-    
-    ul.shopping-cart{
-    
-    position: fixed;
-    
-    top: 100px;
-    
-    right: 0;
-    
-    background-color: #F9F9F9;
-    
-    padding: 10px;
-    
-    min-width: 250px;
-    
-    list-style: none;
-    
-    font-size: 0.8em;
-    
-    border: 1px solid #F0F0F0;
-    
-    }
-    
-    ul.shopping-cart .cart-itm {
-    
-    margin-bottom: 10px;
-    
-    border-bottom: 1px solid #ddd;
-    
-    padding-bottom: 8px;
-    
-    }
-    
-    ul.shopping-cart .cart-itm:last-child{
-    
-    border-bottom: none;
-    
-    margin-bottom: 0px;
-    
-    }
-    
-    ul.shopping-cart .cart-itm .remove-itm{
-    
-    float: right;
-    
-    font-size: 1.5em;
-    
-    }
-    
-    ul.shopping-cart .cart-itm .remove-itm a{
-    
-    text-decoration:none;
-    
-    color:#000;
-    
-    }
-    
-    .cart-total-text a{
-    
-    float:right;
-    
-    }
-    
-    
-    
-    .cart-view-table-front{
-    
-    font-size: 0.7em;
-    
-    position: fixed;
-    
-    right: 10px;
-    
-    max-width: 350px;
-    
-    font-family: Arial
-    
-    }
-    
-    .cart-view-table-front h3{
-    
-    text-align: center;
-    
-    padding: 0;
-    
-    margin: 0px 0px 6px 0px;
-    
-    }
-    
-    .cart-view-table-front, .cart-view-table-back {
-    
-    max-width: 700px;
-    
-    background-color: #FFFFFF;
-    
-    margin-left: auto;
-    
-    margin-right: auto;
-    
-    padding: 10px;
-    
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.12);
-    
-    border: 1px solid #E4E4E4;
-    
-    }
-    
-    .cart-view-table-front table th, .cart-view-table-back table th{
-    
-    text-align: left;
-    
-    }
-    
-    .cart-view-table-front table thead, .cart-view-table-back table thead{
-    
-    background-color: #9CCDFD;
-    
-    }
-    
-    .cart-view-table-front table tbody tr.even, .cart-view-table-back table tbody tr.even{
-    
-    background-color: #F7F7F7;
-    
-    }
-    
-    .cart-view-table-front table tbody tr.odd, .cart-view-table-back table tbody tr.odd{
-    
-    background-color: #EDEDED;
-    
-    }
-    
-    .cart-view-table-front button, .cart-view-table-front .button, .cart-view-table-back button, .cart-view-table-back .button{
-    
-    margin: 10px 1px;
-    
-    float: right;
-    
-    }
-    
-    
-    
+}
